src/stages/snapshots/lumina2__stages__parse__test__add.snap
---
source: src/stages/parse.rs
expression: 123 + 321
---
Binary(
    Binary {
        lhs: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        123,
                    ),
                ),
            ),
        ),
        op: Plus(
            Plus,
        ),
        rhs: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        321,
                    ),
                ),
            ),
        ),
    },
)
