src/stages/snapshots/lumina2__stages__parse__test__block_empty.snap
---
source: src/stages/parse.rs
expression: "{ }"
---
Block {
    tok_l_brace: LBrace,
    statements: [],
    tok_r_brace: RBrace,
}
