src/stages/snapshots/lumina2__stages__parse__test__block_expr.snap
---
source: src/stages/parse.rs
expression: "{ 1 }"
---
Block {
    tok_l_brace: LBrace,
    statements: [
        Expr(
            ExprStatement {
                expr: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                1,
                            ),
                        ),
                    ),
                ),
                tok_semicolon: None,
            },
        ),
    ],
    tok_r_brace: RBrace,
}
