src/stages/snapshots/lumina2__stages__parse__test__function_with_params.snap
---
source: src/stages/parse.rs
expression: "fn some_func(a: u32, b: bool) {}"
---
FunctionDeclaration {
    tok_fn: Fn,
    name: Ident(
        "some_func",
    ),
    tok_lparen: LParen,
    params: PunctuatedList {
        items: [
            FunctionParameter {
                name: Ident(
                    "a",
                ),
                tok_colon: Colon,
                ty: Ident(
                    "u32",
                ),
            },
            FunctionParameter {
                name: Ident(
                    "b",
                ),
                tok_colon: Colon,
                ty: Ident(
                    "bool",
                ),
            },
        ],
        punctuation: [
            Comma,
        ],
    },
    tok_rparan: RParen,
    return_ty: None,
    body: Block {
        tok_l_brace: LBrace,
        statements: [],
        tok_r_brace: RBrace,
    },
}
