src/stages/snapshots/lumina2__stages__parse__test__ident.snap
---
source: src/stages/parse.rs
expression: some_ident
---
Variable(
    Variable {
        variable: Ident(
            "some_ident",
        ),
    },
)
