src/stages/snapshots/lumina2__stages__parse__test__un_op.snap
---
source: src/stages/parse.rs
expression: "-123"
---
Unary(
    Unary {
        op: Negative(
            Minus,
        ),
        value: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        123,
                    ),
                ),
            ),
        ),
    },
)
